--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,194 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap');
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --ff: 'Plus Jakarta Sans', sans-serif;
+  --clr-primary: 242, 48%, 58%;
+  --clr-primary-light: 243, 100%, 82%;
+  --clr-white: #ffffff;
+  --clr-text-dark: 237, 100%, 4%;
+  --clr-text-light: 216, 15%, 57%;
+  --clr-app-bg: 220, 69%, 97%;
+  --clr-box-bg: 0, 0%, 100%;
+  --clr-line: 221, 69%, 94%;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
+  --clr-red: 0, 78%, 63%;
+  --clr-red-light: 0, 100%, 80%;
+  --linear-bg: linear-gradient(
+    180deg,
+    #e9effa 0%,
+    rgba(233, 239, 250, 0.5) 100%
   );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --fs-700: 2rem;
+  --fs-600: 1.5rem;
+  --fs-500: 1.125rem;
+  --fs-400: 0.9375rem;
+  --fs-300: 0.75rem;
+  --fs-200: 0.8125rem;
+  --fs-100: 0.75rem;
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --line-h-400: 23px;
+  --line-h-300: 19px;
+  --line-h-200: 15px;
+  --line-h-100: 13px;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --drawer-width: 280px;
 }
 
-@media (prefers-color-scheme: dark) {
+.dark {
+  --clr-app-bg: 235, 16%, 15%;
+  --clr-box-bg: 235, 12%, 19%;
+  --clr-line: 236, 11%, 27%;
+  --clr-text-dark: 0, 0%, 100%;
+  --linear-bg: linear-gradient(
+    180deg,
+    rgba(43, 44, 55, 0.25) 0%,
+    rgba(43, 44, 55, 0.125) 100%
+  );
+}
+
+@media screen and (max-width: 650px) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+    --drawer-width: 200px;
   }
 }
 
-* {
+html {
   box-sizing: border-box;
-  padding: 0;
+}
+*,
+*::after,
+*::before {
   margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+button,
+input {
+  background: none;
+  border: none;
+  border-radius: none;
+  font-family: inherit;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+button {
+  cursor: pointer;
+  display: block;
 }
-
+ul {
+  list-style-type: none;
+}
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body {
+  font-family: var(--ff);
+  font-weight: 500;
+  /* min-height: 100vh; */
+  overflow-x: hidden;
+}
+/* #__next {
+  height: 100vh;
+} */
+
+/* UTILS */
+
+.bg-app {
+  background-color: hsl(var(--clr-app-bg));
+}
+.bg-box {
+  background-color: hsl(var(--clr-box-bg));
+}
+.bg-primary {
+  background-color: hsl(var(--clr-primary));
+}
+.bg-primary-light {
+  background-color: hsl(var(--clr-primary-light));
+}
+.bg-red {
+  background-color: hsl(var(--clr-red));
+}
+.bg-red-light {
+  background-color: hsl(var(--clr-redlight));
+}
+.bg-linear {
+  background: var(--linear-bg);
+}
+.text-dark {
+  color: hsl(var(--clr-text-dark));
+}
+.text-light {
+  color: hsl(var(--clr-text-light));
+}
+.text-primary {
+  color: hsl(var(--clr-primary));
+}
+.text-primary-light {
+  color: hsl(var(--clr-primary-light));
+}
+.text-red {
+  color: hsl(var(--clr-red));
+}
+.text-red-light {
+  color: hsl(var(--clr-redlight));
+}
+.fs-700 {
+  font-size: var(--fs-700);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-300 {
+  font-size: var(--fs-300);
+}
+.fs-200 {
+  font-size: var(--fs-200);
+}
+.fs-100 {
+  font-size: var(--fs-100);
+}
+.line-h-400 {
+  line-height: var(--line-h-400);
+}
+.line-h-300 {
+  line-height: var(--line-h-300);
+}
+.line-h-200 {
+  line-height: var(--line-h-200);
+}
+.line-h-100 {
+  line-height: var(--line-h-100);
+}
+.fw-m {
+  font-weight: 500;
+}
+.fw-b {
+  font-weight: 700;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+
+.flex {
+  display: flex;
+  gap: var(--gap, 2rem);
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap, 2rem);
 }
